# ai-video-studio

./: .env.example  .gitignore  README.md  manim.cfg  pyproject.toml
.agents/skills/generate-video/: SKILL.md
.agents/skills/generate-video/prompts/: manim_codegen.md  paper_analysis.md  script_generation.md  visual_fix.md
.claude/skills/ai-news-video/: SKILL.md
.claude/skills/ai-news-video/scripts/: capture.py  charts_reference.py  lowerthirds_reference.py  produce.py  record.py  scenes_reference.py  script_reference.py
.claude/skills/generate-video/: SKILL.md
.claude/skills/generate-video/prompts/: html_codegen.md
docs/: script-voice.md
docs/collage/: AUTHORING.md  CONTRACTS.md  DEMO.md
docs/collage/examples/: 01_parallax_cold_open.collage.json  02_nodegraph_reveal.collage.json  03_split_experiment.collage.json  04_outro_quote.collage.json
docs/superpowers/specs/: 2026-06-24-video-studio-app-design.md  2026-07-17-vox-finishing-techniques-design.md
scripts/: clone_voice.py  record_voice.py
src/: config.py  pipeline.py
src/alignment/: align.py
src/analysis/: analyzer.py  models.py  script_writer.py
src/animation/: codegen.py  fixer.py  frame_renderer.py  html_renderer.py  manim_renderer.py  models.py  validator.py
src/assets/: generate.py
src/audio/: sfx.py
src/collage/: builder.py  cmd.py  spec.py  timing.py  work.py
src/collage/runtime/: collage-runtime.css  collage-runtime.js
src/compositing/: compositor.py
src/imagegen/: __init__.py  cutout.py  flux.py  models.py  torch_backend.py
src/ingestion/: models.py  parser.py
src/qa/: __init__.py  run_qa.py
src/studio/: __init__.py  agent.py  agent_tools.py  capabilities.py  config.py  generate.py  ltx_api.py  presets.py  producer.py  projects.py  runs.py  server.py  style_packs.py  transcripts.py  tts.py  tts_qwen.py  tts_voicebox.py
src/utils/: file_manager.py  hw.py  locks.py  timing.py
src/videogen/: comfyui.py  kenburns.py  ltx.py  ltx_torch.py
src/visuals/: __init__.py  beats.py
src/voice/: models.py  synthesizer.py
studio-ui/: index.html  package-lock.json  package.json  vite.config.ts
studio-ui/src/: App.tsx  api.ts  constants.ts  index.css  ws.ts
studio-ui/src/components/: ChatPanel.tsx  FlowViewer.tsx  GeneratePanel.tsx  Modal.tsx  PresetBar.tsx  ProjectBar.tsx  SegmentCard.tsx  formatters.ts
studio-ui/src/styles/: chat-panel.css  flow-viewer.css  generate-panel.css  preset-project-bar.css
style_packs/anthropic_docu/: flux_style.txt  runtime.css  tokens.json
style_packs/anthropic_docu/fonts/: OFL.txt
templates/html/: base.html  comparison.html  diagram.html  timeline.html
templates/manim/: base_scene.py  equation_reveal.py  title_card.py
tests/: test_agent_tools.py  test_agent_ws.py  test_alignment.py  test_assets_style_packs.py  test_capabilities.py  test_collage_builder.py  test_compositor.py  test_frame_renderer.py  test_generate_oneshot.py  test_imagegen_entrypoint.py  test_pipeline_media_exit_codes.py  test_pipeline_steps_endpoint.py  test_platform_dispatch.py  test_preset_env.py  test_preset_generation_settings.py  test_produce_stop_endpoint.py  test_producer.py  test_projects.py  test_qa.py  test_qa_av_sync.py  test_qa_scene_checks.py  test_runs.py  test_sfx.py  test_studio_brief.py  test_studio_config.py  test_style_pack_endpoint.py  test_synthesize.py  test_transcripts.py  test_voicebox_profiles_endpoint.py  test_voicebox_tts.py
