[project]
name = "paper-to-video"
version = "0.1.0"
description = "Generate 3Blue1Brown-style educational videos from research papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Animation
    "manim>=0.18.0",
    # Voice Synthesis
    "elevenlabs>=1.15.0",
    # Audio/Video Processing
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    # Browser Rendering
    "playwright>=1.40.0",
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "claude-agent-sdk>=0.2.110",
    "mflux>=0.18.0",
    "diffusers>=0.38.0",
    "accelerate>=1.14.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
voice-record = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
]

[project.scripts]
paper-to-video = "src.pipeline:main"

[tool.ruff]
line-length = 100
target-version = "py312"
